# incremental-ml-training-and-serving

./: .gitignore  Makefile  README.md  pyproject.toml  redpanda.yml
models/: model_data.json
src/: date_utils.py  model_registry.py  paths.py  predict.py  producers.py  training.py
